Se le da estilo a la bara de navegación

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,10 +4,10 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbar-toggler">
-      <a class="navbar-brand" href="#">
-        <img src="../../assets/images/logo_sin_bordes.png" alt="Logo de EyE Asesores de seguros">
+      <a class="navbar-container navbar-brand" href="#">
+        <img src="../../assets/images/logo.png" alt="Logo de EyE Asesores de seguros">
       </a>
-      <ul class="navbar-nav d-flex justify-content-center align-items-centeri">
+      <ul class="navbar-nav d-flex justify-content-center align-items-center">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Sobre nosotros</a>
         </li>
