--- a/css/style.css
+++ b/css/style.css
@@ -9572,6 +9572,29 @@ h6,
   list-style-type: none;
 }
 
+.img_service{
+height: 400px;
+}
+
+a{
+  text-decoration: none;
+  transition: transform 0.5s, filter 0.5s;
+}
+
+.video-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* Establece el aspect ratio del video (16:9) */
+  height: 0;
+  overflow: hidden;
+}
+
+hr{
+  border: none;
+  height: 2px;
+  background-color: black
+}
+
 @media (max-width: 992px) {
   #sobreNosotros {
     content: url(https://img.freepik.com/foto-gratis/chica-morena-sonriente-satisfecha-apuntando-dedo-abajo-recomendar-producto_1258-19017.jpg?w=1060&t=st=1687834228~exp=1687834828~hmac=fc018ce731df22d50b42f6953ef0db3335d19fb59d28572e8789a567b58d0827);
@@ -9584,6 +9607,3 @@ h6,
   }
 }
 
-.img_service{
-height: 400px;
-}
