--- a/css/style.css
+++ b/css/style.css
@@ -43,11 +43,7 @@
 }
 
 html {
-  font-family: sans-serif;
-  line-height: 1.15;
-  -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
+  font-family: 'Solway', serif;}
 
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block;
@@ -55,10 +51,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: "Open Sans", sans-serif;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
+  font-family: 'Solway', serif;  line-height: 1.5;
   color: #757575;
   text-align: left;
   background-color: #fff;
@@ -9508,7 +9501,7 @@ h6,
 
 .navbar-light .navbar-nav .nav-link {
   padding: 30px 15px;
-  color: #757575;
+  color: #194376 ;
   font-weight: 600;
   outline: none;
 }
@@ -9595,6 +9588,32 @@ hr{
   background-color: black
 }
 
+.contenedor:hover .imagen {-webkit-transform:scale(1);transform:scale(1.5);}
+.contenedor {overflow:hidden;}
+
+
+.efect:hover{
+  text-decoration: none;
+  transform: scale(1.2);
+}
+
+.links {
+  text-decoration: none;
+  transition: transform 0.3s ease-in-out, background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+.links:hover {
+  transform: scale(1.1);
+}
+
+.whatsapp-link {
+  position: fixed;
+  bottom: 20%;
+  right: 0px;
+  margin: 30px;
+  z-index: 9999;
+}
+
 @media (max-width: 992px) {
   #sobreNosotros {
     content: url(https://img.freepik.com/foto-gratis/chica-morena-sonriente-satisfecha-apuntando-dedo-abajo-recomendar-producto_1258-19017.jpg?w=1060&t=st=1687834228~exp=1687834828~hmac=fc018ce731df22d50b42f6953ef0db3335d19fb59d28572e8789a567b58d0827);
@@ -9606,4 +9625,13 @@ hr{
     content: url(https://img.freepik.com/foto-gratis/chica-latina-sonriente-compartiendo-ofertas-especiales-al-menor_1262-17557.jpg?w=1060&t=st=1687714973~exp=1687715573~hmac=669aef8778bc740d8567cc990bb2069cca2626546a569bb90c523ecd0228ff32);
   }
 }
+
+@media (max-width: 500px) {
+  .img_service {
+    width: 300px;
+    height: 200px;
+  }
+}
+
+
 
