Se agrega el nuevo logo y se acomoda el diseño según el color del logo

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
 /******* Bootstrap Theming ********/
 
-$primary: #194376;
-$secondary: #46C6CE;
+$primary:#312783;
+$secondary:#17a2b8;
 $light: #F3F6FF;
 $dark: #1A1A1A;
 
