--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,8 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #194376;
-  --secondary: #46C6CE;
+  --primary:#312783;
+  --secondary:#17a2b8;
   --success: #28a745;
   --info: #17a2b8;
   --warning: #ffc107;
@@ -145,7 +145,7 @@ sup {
 }
 
 a {
-  color: #194376;
+  color:#312783;
   text-decoration: none;
   background-color: transparent;
 }
@@ -357,7 +357,7 @@ h1, h2, h3, h4, h5, h6,
   margin-bottom: 0.5rem;
   font-weight: 500;
   line-height: 1.2;
-  color: #194376;
+  color:#312783;
 }
 
 h1, .h1 {
@@ -2358,8 +2358,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #194376;
-  border-color: #194376;
+  background-color:#312783;
+  border-color:#312783;
 }
 
 .btn-primary:hover {
@@ -2377,8 +2377,8 @@ fieldset:disabled a.btn {
 
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #194376;
-  border-color: #194376;
+  background-color:#312783;
+  border-color:#312783;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
@@ -2395,8 +2395,8 @@ fieldset:disabled a.btn {
 
 .btn-secondary {
   color: #212529;
-  background-color: #46C6CE;
-  border-color: #46C6CE;
+  background-color:#17a2b8;
+  border-color:#17a2b8;
 }
 
 .btn-secondary:hover {
@@ -2414,8 +2414,8 @@ fieldset:disabled a.btn {
 
 .btn-secondary.disabled, .btn-secondary:disabled {
   color: #212529;
-  background-color: #46C6CE;
-  border-color: #46C6CE;
+  background-color:#17a2b8;
+  border-color:#17a2b8;
 }
 
 .btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active,
@@ -2653,14 +2653,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #194376;
-  border-color: #194376;
+  color:#312783;
+  border-color:#312783;
 }
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #194376;
-  border-color: #194376;
+  background-color:#312783;
+  border-color:#312783;
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
@@ -2668,15 +2668,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #194376;
+  color:#312783;
   background-color: transparent;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #194376;
-  border-color: #194376;
+  background-color:#312783;
+  border-color:#312783;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
@@ -2685,14 +2685,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-secondary {
-  color: #46C6CE;
-  border-color: #46C6CE;
+  color:#17a2b8;
+  border-color:#17a2b8;
 }
 
 .btn-outline-secondary:hover {
   color: #212529;
-  background-color: #46C6CE;
-  border-color: #46C6CE;
+  background-color:#17a2b8;
+  border-color:#17a2b8;
 }
 
 .btn-outline-secondary:focus, .btn-outline-secondary.focus {
@@ -2700,15 +2700,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-secondary.disabled, .btn-outline-secondary:disabled {
-  color: #46C6CE;
+  color:#17a2b8;
   background-color: transparent;
 }
 
 .btn-outline-secondary:not(:disabled):not(.disabled):active, .btn-outline-secondary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-secondary.dropdown-toggle {
   color: #212529;
-  background-color: #46C6CE;
-  border-color: #46C6CE;
+  background-color:#17a2b8;
+  border-color:#17a2b8;
 }
 
 .btn-outline-secondary:not(:disabled):not(.disabled):active:focus, .btn-outline-secondary:not(:disabled):not(.disabled).active:focus,
@@ -2910,7 +2910,7 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #194376;
+  color:#312783;
   text-decoration: none;
 }
 
@@ -3207,7 +3207,7 @@ input[type="button"].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #194376;
+  background-color:#312783;
 }
 
 .dropdown-item.disabled, .dropdown-item:disabled {
@@ -3496,8 +3496,8 @@ input[type="button"].btn-block {
 
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #194376;
-  background-color: #194376;
+  border-color:#312783;
+  background-color:#312783;
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
@@ -3557,8 +3557,8 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #194376;
-  background-color: #194376;
+  border-color:#312783;
+  background-color:#312783;
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -3782,7 +3782,7 @@ input[type="button"].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #194376;
+  background-color:#312783;
   border: 0;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   appearance: none;
@@ -3810,7 +3810,7 @@ input[type="button"].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #194376;
+  background-color:#312783;
   border: 0;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   appearance: none;
@@ -3841,7 +3841,7 @@ input[type="button"].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #194376;
+  background-color:#312783;
   border: 0;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   appearance: none;
@@ -3969,7 +3969,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #194376;
+  background-color:#312783;
 }
 
 .nav-fill > .nav-link,
@@ -3999,7 +3999,6 @@ input[type="button"].btn-block {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  padding: 0.5rem 1rem;
 }
 
 .navbar .container,
@@ -4575,7 +4574,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #194376;
+  color:#312783;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
@@ -4601,8 +4600,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #194376;
-  border-color: #194376;
+  background-color:#312783;
+  border-color:#312783;
 }
 
 .page-item.disabled .page-link {
@@ -4663,7 +4662,7 @@ a.badge:hover, a.badge:focus {
 
 .badge-primary {
   color: #fff;
-  background-color: #194376;
+  background-color:#312783;
 }
 
 a.badge-primary:hover, a.badge-primary:focus {
@@ -4678,7 +4677,7 @@ a.badge-primary:focus, a.badge-primary.focus {
 
 .badge-secondary {
   color: #212529;
-  background-color: #46C6CE;
+  background-color:#17a2b8;
 }
 
 a.badge-secondary:hover, a.badge-secondary:focus {
@@ -4964,7 +4963,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #194376;
+  background-color:#312783;
   transition: width 0.6s ease;
 }
 
@@ -5040,8 +5039,8 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #194376;
-  border-color: #194376;
+  background-color:#312783;
+  border-color:#312783;
 }
 
 .list-group-item + .list-group-item {
@@ -5811,7 +5810,7 @@ a.close.disabled {
   padding: 0.5rem 0.75rem;
   margin-bottom: 0;
   font-size: 1rem;
-  color: #194376;
+  color:#312783;
   background-color: #f7f7f7;
   border-bottom: 1px solid #ebebeb;
 }
@@ -6087,7 +6086,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #194376 !important;
+  background-color:#312783 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -6097,7 +6096,7 @@ button.bg-primary:focus {
 }
 
 .bg-secondary {
-  background-color: #46C6CE !important;
+  background-color:#17a2b8 !important;
 }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
@@ -6215,11 +6214,11 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #194376 !important;
+  border-color:#312783 !important;
 }
 
 .border-secondary {
-  border-color: #46C6CE !important;
+  border-color:#17a2b8 !important;
 }
 
 .border-success {
@@ -9257,7 +9256,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #194376 !important;
+  color:#312783 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
@@ -9265,7 +9264,7 @@ a.text-primary:hover, a.text-primary:focus {
 }
 
 .text-secondary {
-  color: #46C6CE !important;
+  color:#17a2b8 !important;
 }
 
 a.text-secondary:hover, a.text-secondary:focus {
@@ -9496,19 +9495,19 @@ h6,
   height: 50%;
   top: 0;
   left: 0;
-  background: #194376;
+  background:#312783;
 }
 
 .navbar-light .navbar-nav .nav-link {
   padding: 30px 15px;
-  color: #194376 ;
+  color:#312783 ;
   font-weight: 600;
   outline: none;
 }
 
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-nav .nav-link.active {
-  color: #46C6CE;
+  color:#17a2b8;
 }
 
 @media (max-width: 991.98px) {
@@ -9556,7 +9555,7 @@ h6,
 }
 
 .testimonial-carousel .owl-dot.active {
-  background: #46C6CE;
+  background:#17a2b8;
 }
 
 .contact-form .help-block ul {
@@ -9618,6 +9617,21 @@ a:hover{
 }
 
 
+.eye{
+  font-size: 30px;
+  font-family: 'Laila', sans-serif;
+}
+
+.eye_footer{
+  font-family: 'Laila', sans-serif;
+  color: white;
+}
+
+@media (max-width: 1200px) {
+  .eye {
+    font-size: 14px;
+  }
+}
 
 @media (max-width: 500px) {
   .img_service {
@@ -9626,5 +9640,8 @@ a:hover{
   }
 }
 
-
-
+@media (max-width: 400px) {
+  .text_contact {
+    font-size: 13px;
+  }
+}
